blueperf/helper/scripts/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: acmeair-ingress
  annotations:
    kubernetes.io/ingress.class: public-iks-k8s-nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: INGRESS_URL
    http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: acmeair-auth-service
            port:
              number: 9080
      - path: /booking
        pathType: Prefix
        backend:
          service:
            name: acmeair-booking-service
            port:
              number: 9080
      - path: /customer
        pathType: Prefix
        backend:
          service:
            name: acmeair-customer-service
            port:
              number: 9080
      - path: /flight
        pathType: Prefix
        backend:
          service:
            name: acmeair-flight-service
            port:
              number: 9080
